--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ p {
   padding: 94px 0;
 }
 
-.section--secondary {
+.section--no-padding-top {
   padding-top: 0;
 }
 
@@ -78,7 +78,7 @@ p {
   border-bottom: 1px solid #ececec;
 }
 
-.page-header__section {
+.page-header__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -159,13 +159,16 @@ p {
   display: -ms-flexbox;
   display: flex;
   margin-left: auto;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 .contact__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact__info {
+.contact__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -177,18 +180,9 @@ p {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact__info:hover, .contact__info:focus {
+.contact__link:hover, .contact__link:focus {
   color: #2196f3;
   fill: #2196f3;
-}
-
-.contact__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .contact__icon {
@@ -246,6 +240,15 @@ p {
           box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.features__title {
+  margin-top: 30px;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
 .features {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -274,7 +277,7 @@ p {
   padding: 0;
 }
 
-.features__info {
+.features__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -331,11 +334,11 @@ p {
   margin-left: -30px;
 }
 
-.section--background {
+.section--team-background {
   background-color: #f5f4fa;
 }
 
-.team__card {
+.team__item {
   -ms-flex-preferred-size: calc(100% / 4 - 30px);
       flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
@@ -400,7 +403,7 @@ p {
   margin-bottom: 10px;
 }
 
-.team__info {
+.team__text {
   font-weight: 400;
   text-align: center;
   margin-bottom: 16px;
