--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,13 +1,14 @@
 .contact {
     display: flex;
     margin-left: auto;
+    align-items: baseline;
 }
 
 .contact__item:not(:last-child) {
     margin-right: 50px;
 }
 
-.contact__info {
+.contact__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -25,11 +26,6 @@
     color: $accent-color;
     fill: $accent-color;
     }
-}
-
-.contact__box {
-    display: flex;
-    align-items: center;
 }
 
 .contact__icon {
