--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,3 +1,13 @@
+.features__title {
+    margin-top: 30px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+
+    color: $title-text-color;
+}
+
 .features {
     display: flex;
     margin: 0;
@@ -19,7 +29,7 @@
 
 }
 
-.features__info {
+.features__text {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
