--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,7 +4,7 @@
   border-bottom: $header-border solid $header-border-color;
 }
 
-.page-header__section {
+.page-header__container {
   display: flex;
   align-items: center;
 }
